--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>
-  {{title}}
-</h1>
+
+<!--<app-log-in></app-log-in>-->
+<!--<app-main></app-main>-->
+<body>
+   <router-outlet></router-outlet>
+
+ </body>
